@startuml
skinparam backgroundcolor transparent
skinparam monochrome reverse
skinparam shadowing false


interface IRectangle {
  -Int width
  -Int height
}

class Rectangle {
  -Int width
  -Int height
}

interface IMoveable {
    + move()
    + add(gameObject: IMoveAble)
}

class Moveable {
    + move()
    + add(gameObject: IMoveAble)
}


IMoveable <|-- Moveable
IRectangle <|-- Rectangle
Rectangle <|-- GameField
Rectangle <|-- PacMan
Moveable <|-- PacMan

@enduml



@startuml
skinparam backgroundcolor transparent
skinparam monochrome reverse
skinparam shadowing false

class Rectangle {
  -Int width
  -Int height
}

Rectangle <|-- GameField

@enduml



@startuml
skinparam backgroundcolor transparent
skinparam monochrome reverse
skinparam shadowing false


interface IRectangle {
  -Int width
  -Int height
}

class Rectangle {
  -Int width
  -Int height
}

IRectangle <|-- GameField
Rectangle <-- GameField : delegate

@enduml